<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_registro"
        android:icon="@drawable/ic_auto_graph"
        android:title="@string/registro" />

    <item
        android:id="@+id/nav_prediction"
        android:icon="@drawable/ic_edit_calendar"
        android:title="@string/prediction" />

    <item
        android:id="@+id/nav_historial"
        android:icon="@drawable/ic_history"
        android:title="@string/historial" />

    <item
        android:id="@+id/nav_stats"
        android:icon="@drawable/ic_bar_chart"
        android:title="@string/stats" />

    <item
        android:id="@+id/nav_info"
        android:icon="@drawable/ic_info"
        android:title="@string/info" />

</menu>