<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ligh_pink"
    android:orientation="vertical"
    android:paddingStart="22dp"
    android:paddingTop="22dp"
    android:paddingEnd="22dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/il_tuo_profilo"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"
        android:shadowColor="@color/white"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="1"
        android:layout_marginTop="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/nome_utente">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"

            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/durata_media_del_ciclo_giorni">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:background="@color/white"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/durata_media_del_periodo_giorni">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:maxLength="2"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRicalcolareDati"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/dark_gray"
        android:text="@string/ricalcolare_dati" />

    <Button
        android:id="@+id/btnSaveProfile"
        android:layout_width="255dp"
        android:layout_height="74dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:text="@string/salva_profilo" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:backgroundTint="@color/ligh_gray"
        android:text="@string/chiudere_sessione"
        android:textColor="@color/dark_gray" />

</LinearLayout>